# clawathon-tom-and-jerry

./: .gitignore  AGENTS.md  CLAUDE.md  FEATURE_PLAN.md  README-en.md  README.md  promotional_campaigns_risk_assessment.md
code/zalopay-knowledge/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt
code/zalopay-knowledge/.claude/: launch.json
code/zalopay-knowledge/.cursor/: skills
code/zalopay-knowledge/.tmp/pytest-of-lap15800/: pytest-current
code/zalopay-knowledge/app/: config.py
code/zalopay-knowledge/app/api/: app.py  (+10 more)
code/zalopay-knowledge/deploy/: agentbase-runtime.env.example  network-policy.md  operator-cli.env.example
code/zalopay-knowledge/docs/: API-CONTRACT.md  DEPLOY-READINESS.md
code/zalopay-knowledge/evals/: golden_cases.json  last_eval_report.json  metrics.py  run_eval.py  sample_cases.json
code/zalopay-knowledge/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
code/zalopay-knowledge/scripts/: create_lucky_wheel_demo.py  create_sample_workflow.py  create_test_data_10_cases.py  deploy-agent.sh  export_departments.py  get_gmail_token.py  live_test_jira_workflow.py  publish_risk_policy.py  seed_demo_campaigns.py  split_risk_policy.py  update_dgs585_full.py  update_lucky_wheel_workflow.py  validate-runtime-env.sh  verify_gdrive_oauth.py
code/zalopay-knowledge/tests/: conftest.py  department_fixtures.py
(+524 files in other folders)
